--- a/app/main/views/partner/partner.information.html
+++ b/app/main/views/partner/partner.information.html
@@ -24,7 +24,7 @@
                 </select>
             </div>
         </div> -->
-    <div class="form-group">
+    <!-- <div class="form-group">
         <label class="control-label col-md-4 col-sm-4 col-xs-12">Quốc Gia</label>
         <div class="col-md-6 col-sm-6 col-xs-12">
             <select class="form-control" ng-model="Partner.nationId">
@@ -36,7 +36,7 @@
                 </option>
             </select>
         </div>
-    </div>
+    </div> -->
     <div class="form-group">
         <label class="control-label col-md-4 col-sm-4 col-xs-12">Giám đốc</label>
         <div class="col-md-6 col-sm-6 col-xs-12">
@@ -62,7 +62,7 @@
         </div>
     </div>
     <div class="form-group">
-        <label class="control-label col-md-4 col-sm-4 col-xs-12">Đại chỉ</label>
+        <label class="control-label col-md-4 col-sm-4 col-xs-12">Địa chỉ</label>
         <div class="col-md-6 col-sm-6 col-xs-12">
             <input class="date-picker form-control col-md-7 col-xs-12" type="text" ng-model="Partner.address">
         </div>
