--- a/app/main/views/partner/partner.annualActivity.all.html
+++ b/app/main/views/partner/partner.annualActivity.all.html
@@ -66,7 +66,7 @@
                     <div class="form-group">
                         <label class="control-label col-md-4 col-sm-4 col-xs-12" for="last-name">Nội dung hoạt động: </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                            <textarea class="form-control" rows="5" ng-model="annualActivity.content"></textarea>
+                            <textarea class="form-control" rows="8" ng-model="annualActivity.content"></textarea>
                         </div>
                     </div>
                     <div class="form-group">
@@ -81,8 +81,13 @@
                             <input type="text" class="form-control col-md-7 col-xs-12" ng-model="annualActivity.date">
                         </div>
                     </div>
+                    <div class="form-group">
+                        <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-4">
+                            <button type="button" class="btn btn-primary" ng-click="createAnnaulActivity()">Tạo hoạt động</button>
+                        </div>
+                    </div>
                 </form>
-                <button type="button" class="btn btn-primary" ng-click="createAnnaulActivity()">Tạo hoạt động</button>
+                
             </div>
             <div class="table-responsive">
                 <!-- <ul uib-pagination total-items="totalItems" ng-model="currentPage" max-size="noOfPages" items-per-page="entryLimit"></ul> -->
