--- a/app/main/views/partner/partner.contract.all.html
+++ b/app/main/views/partner/partner.contract.all.html
@@ -1,6 +1,8 @@
 <div class="clearfix"></div>
 <div class="row" ng-controller="nationCtrl">
     <div class="col-md-12 col-sm-12 col-xs-12" ng-init="getAllContract(); getAllPartner()">
+        <!-- <span ng-init="getContractOfUnit()" ng-if="role=='UNIT'"></span> -->
+        <!-- <span ng-init="" ng-if="role=='ADMIN_UNIT'"></span> -->
         <!-- <div class="x_panel"> -->
         <div class="x_title">
             <!-- <h2>Thỏa thuận hợp tác</h2> -->
@@ -222,29 +224,10 @@
                                 <input type="text" id="last-name" name="last-name" class="form-control col-md-7 col-xs-12" ng-model="input.website">
                             </div>
                         </div>
-                        <!-- <div class="form-group">
-                            <label class="control-label col-md-3 col-sm-3 col-xs-12">Mô tả</label>
-                            <div class="col-md-6 col-sm-6 col-xs-12">
-                                <input class="date-picker form-control col-md-7 col-xs-12" type="text" ng-model="input.description">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="control-label col-md-3 col-sm-3 col-xs-12">Mã số thuế</label>
-                            <div class="col-md-6 col-sm-6 col-xs-12">
-                                <input class="date-picker form-control col-md-7 col-xs-12" type="text" ng-model="input.taxCode">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="control-label col-md-3 col-sm-3 col-xs-12">Lĩnh vực làm việc</label>
-                            <div class="col-md-6 col-sm-6 col-xs-12">
-                                <input class="date-picker form-control col-md-7 col-xs-12" type="text" ng-model="input.fieldWork">
-                            </div>
-                        </div> -->
                         <div class="divider-dashed"></div>
                         <div class="form-group">
                             <label for="middle-name" class="control-label col-md-3 col-sm-3 col-xs-12"></label>
                             <div class="col-md-6 col-sm-6 col-xs-12">
-                                <!-- <input id="middle-name" class="form-control col-md-7 col-xs-12" type="text" name="middle-name" ng-model="input.phone"> -->
                                 <h4 class="control-label col-md-7 col-xs-12 cursor" data-toggle="collapse" data-target="#add_contact"> Thêm đầu mối đối tác</h4>
                             </div>
                         </div>
@@ -283,12 +266,6 @@
                                     <input type="text" name="country" class="form-control col-md-10" ng-model="input.partnerContact.skype" />
                                 </div>
                             </div>
-                            <!-- <div class="form-group">
-                                <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-4">
-                                    <button type="submit" class="btn btn-success" ng-click="createPartnerContact()">Tạo</button>
-                                </div>
-                            </div> -->
-                            <!-- <div class="divider-dashed"></div> -->
                         </div>
                         <div class="divider-dashed"></div>
                         <div class="form-group">
@@ -596,8 +573,116 @@
                                         </select> -->
                                     </div>
                                 </div>
-                                <!-- {{selectedPartner.originalObject}} -->
-                                <div class="form-group">
+                                <!-- <div ng-if="selectedPartner.originalObject.id == 0">
+                                    PHẦN NÀY NGHIÊN CỨU THÊM ĐỂ TẠO PARTNER TRỰC TIẾP
+                                    <div class="form-group">
+                                        <label for="middle-name" class="control-label col-md-4 col-sm-4 col-xs-12"></label>
+                                        <div class="col-md-6 col-sm-6 col-xs-12">
+                                            <h4 class="control-label col-md-7 col-xs-12">Thông tin cơ bản</h4>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="control-label col-md-4 col-sm-4 col-xs-12">Tên đối tác: <span class="required">*</span></label>
+                                        <div class="col-md-6 col-sm-6 col-xs-12">
+                                            <input type="text" name="country" class="form-control col-md-10" ng-model="input.partnerDTO.partnerName" required />
+                                        </div>
+                                    </div>
+                                    <div class="form-group" ng-init="getAllNation()">
+                                        <label class="control-label col-md-4 col-sm-4 col-xs-12">Quốc Gia: <span class="required">*</span></label>
+                                        <div class="col-md-6 col-sm-6 col-xs-12">
+                                            <select class="form-control" ng-model="input.partnerDTO.nationId">
+                                                <option ng-repeat="nation in allNations" value="{{nation}}">
+                                                    {{nation.nationName}}
+                                                </option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="control-label col-md-4 col-sm-4 col-xs-12">Giám đốc: </label>
+                                        <div class="col-md-6 col-sm-6 col-xs-12">
+                                            <input class="date-picker form-control col-md-7 col-xs-12" type="text" ng-model="input.partnerDTO.director">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="control-label col-md-4 col-sm-4 col-xs-12">Ngày thành lập: </label>
+                                        <div class="col-md-6 col-sm-6 col-xs-12">
+                                            <input class="date-picker form-control col-md-7 col-xs-12" type="text" ng-model="input.partnerDTO.birthday">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="middle-name" class="control-label col-md-4 col-sm-4 col-xs-12">Số điện thoại: </label>
+                                        <div class="col-md-6 col-sm-6 col-xs-12">
+                                            <input id="middle-name" class="form-control col-md-7 col-xs-12" type="text" name="middle-name" ng-model="input.partnerDTO.phone">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="control-label col-md-4 col-sm-4 col-xs-12">Địa chỉ: </label>
+                                        <div class="col-md-6 col-sm-6 col-xs-12">
+                                            <input class="date-picker form-control col-md-7 col-xs-12" type="text" ng-model="input.partnerDTO.address">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="control-label col-md-4 col-sm-4 col-xs-12">Email: </label>
+                                        <div class="col-md-6 col-sm-6 col-xs-12">
+                                            <input class="date-picker form-control col-md-7 col-xs-12" type="text" ng-model="input.partnerDTO.email">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="control-label col-md-4 col-sm-4 col-xs-12" for="last-name">Website: </label>
+                                        <div class="col-md-6 col-sm-6 col-xs-12">
+                                            <input type="text" id="last-name" name="last-name" class="form-control col-md-7 col-xs-12" ng-model="input.partnerDTO.website">
+                                        </div>
+                                    </div>
+                                    <div class="divider-dashed"></div>
+                                    <div class="form-group">
+                                        <label for="middle-name" class="control-label col-md-4 col-sm-4 col-xs-12"></label>
+                                        <div class="col-md-6 col-sm-6 col-xs-12">
+                                            <h4 class="control-label col-md-7 col-xs-12 cursor"> Đầu mối đối tác</h4>
+                                        </div>
+                                    </div>
+                                    <div class="">
+                                        <div class="form-group">
+                                            <label class="control-label col-md-4 col-sm-4 col-xs-12">Tên: <span class="required">*</span></label>
+                                            <div class="col-md-6 col-sm-6 col-xs-12">
+                                                <input type="text" name="country" class="form-control col-md-10" ng-model="input.partnerDTO.partnerContact.contactName" required />
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label class="control-label col-md-4 col-sm-4 col-xs-12">Chức vụ: </label>
+                                            <div class="col-md-6 col-sm-6 col-xs-12">
+                                                <input type="text" name="country" class="form-control col-md-10" ng-model="input.partnerDTO.partnerContact.about" />
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label class="control-label col-md-4 col-sm-4 col-xs-12">Email: </label>
+                                            <div class="col-md-6 col-sm-6 col-xs-12">
+                                                <input type="text" name="country" class="form-control col-md-10" ng-model="input.partnerDTO.partnerContact.email" />
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label class="control-label col-md-4 col-sm-4 col-xs-12">Phone: </label>
+                                            <div class="col-md-6 col-sm-6 col-xs-12">
+                                                <input type="text" name="country" class="form-control col-md-10" ng-model="input.partnerDTO.partnerContact.phone" />
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label class="control-label col-md-4 col-sm-4 col-xs-12">Skype: </label>
+                                            <div class="col-md-6 col-sm-6 col-xs-12">
+                                                <input type="text" name="country" class="form-control col-md-10" ng-model="input.partnerDTO.partnerContact.skype" />
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="divider-dashed"></div>
+                                    <div class="form-group">
+                                        <div class="col-md-8">
+                                        </div>
+                                        <div class="col-md-4">
+                                            <button type="submit" class="btn btn-success" ng-click="createPartner()">Tạo</button>
+                                        </div>
+                                    </div>
+                                    <div class="divider-dashed"></div>
+                                </div> -->
+                                <div class="form-group" ng-if="selectedPartner != undefined && selectedPartner.originalObject.id != 0">
                                     <label class="control-label col-md-4 col-sm-4 col-xs-12">Người ký Thỏa thuận hợp tác (đối tác): </label>
                                     <div class="col-md-6 col-sm-6 col-xs-12">
                                         <select class="form-control" ng-model="input.partnerContactId">
@@ -615,7 +700,7 @@
                                             <div class="col-md-6 col-sm-6 col-xs-12">
                                                 <input type="text" name="country" class="form-control col-md-10" ng-model="input.partnerContact.contactName" required />
                                             </div>
-                                        </div>
+                                        </div>.partnerDTO
                                         <div class="form-group">
                                             <label class="control-label col-md-4 col-sm-4 col-xs-12">Chức vụ: </label>
                                             <div class="col-md-6 col-sm-6 col-xs-12">
@@ -642,7 +727,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="form-group" ng-if="role=='ADMIN_UNIT'">
+                                <div class="form-group">
                                     <label class="control-label col-md-4 col-sm-4 col-xs-12">
                                         <!-- Đơn vị theo dõi:  -->
                                     </label>
@@ -655,7 +740,7 @@
                                                 </tr>
                                             </thead>
                                             <tbody>
-                                                <tr ng-repeat="unitName in allUnit" class="cursor" ng-click="unitName.checked = !unitName.checked" id="unitName_share_contract_{{unitName.id}}" style="background-color: white;">
+                                                <tr ng-repeat="unitName in allUnit" class="cursor" ng-click="unitName.checked = !unitName.checked" id="unitName_share_contract_{{unitName.id}}" style="background-color: white;" ng-if="unitName.id != id">
                                                     <!-- <th scope="row">{{unitName.id}}</th> -->
                                                     <td>{{unitName.unitName}}</td>
                                                     <td class="a-center unitName_share_contract_{{unitName.id}}">
@@ -997,7 +1082,7 @@
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            <tr ng-repeat="unitName in allUnit" class="cursor" ng-click="unitName.checked = !unitName.checked" id="unitName_share_contract_{{unitName.id}}">
+                                            <tr ng-repeat="unitName in allUnit" class="cursor" ng-click="unitName.checked = !unitName.checked" id="unitName_share_contract_{{unitName.id}}" ng-if="unitName.id != id">
                                                 <!-- <th scope="row">{{unitName.id}}</th> -->
                                                 <td>{{unitName.unitName}}</td>
                                                 <td class="a-center unitName_share_contract_{{unitName.id}}">
