--- a/app/main/views/settings/settings.vnu.html
+++ b/app/main/views/settings/settings.vnu.html
@@ -60,6 +60,17 @@
                     </div>
                 </div>
                 <div class="form-group">
+                    <label class="control-label col-md-3 col-sm-3 col-xs-12">Nhập lại mật khẩu:</label>
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <input type="password" name="country" class="form-control col-md-10" ng-model="input.reTypePass" required />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="alert alert-warning col-md-6 col-sm-6 col-xs-12 col-md-offset-3" ng-if="input.password != input.reTypePass && input.reTypePass != null">
+                        <strong>Mật khẩu mới không khớp</strong>
+                    </div>
+                </div>
+                <div class="form-group" ng-if="input.password == input.reTypePass && input.reTypePass != null && input.reTypePass != '' && input.password != null && input.password != ''">
                     <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
                         <button type="submit" class="btn btn-success" ng-click="createAccount()">Tạo</button>
                     </div>
@@ -169,14 +180,13 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr ng-repeat="unitName in allUnit_filtered = allUnit | filter : all_unit | startFrom:(allUnit_currentPage-1)*allUnit_entryLimit | limitTo:allUnit_entryLimit" id="tr_unitName_{{unitName.id}}">
+                                <tr ng-repeat="unitName in allUnit" id="tr_unitName_{{unitName.id}}">
                                     <th scope="row">{{unitName.id}}</th>
                                     <td id="unitName_{{unitName.id}}">{{unitName.unitName}}</td>
                                     <td id="username_{{unitName.id}}">{{unitName.user.userName}}</td>
                                     <th>
                                         <!-- <i id="edit_unitName_{{unitName.id}}" class="fa fa-edit cursor" ng-click="editUnitName(unitName.id); edit_unitName = true"></i>
                                         <i id="save_edit_unitName_{{unitName.id}}" class="fa fa-save cursor" ng-click="saveEditUnitName(unitName.id)" ng-if="edit_unitName"></i> -->
-
                                         <i id="edit_unitName_{{unitName.id}}" class="fa fa-edit cursor" ng-click="editUnitName(unitName.id, unitName.content); edit_unitName = true"></i>
                                         <button id="button_cancel_edit_unitName_{{unitName.id}}" ng-if="edit_unitName" type="button" class="btn btn-default btn-xs" ng-click="cancelEditUnitName(unitName)">Hủy</button>
                                         <button id="save_edit_unitName_{{unitName.id}}" ng-if="edit_unitName" type="button" class="btn btn-success btn-xs" ng-click="saveEditUnitName(unitName.id)">Xác nhận</button>
